Added -std=c++11 cflag

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ SRC=pcm.cpp main.cpp
 EXE=main
 
 LIBS=$(pkg-config --libs libcrypto++)
-CFLAGS=$(pkg-config --cflags libcrypto++)
+CFLAGS=$(pkg-config --cflags libcrypto++) -std=c++11
 HDRS=pcm.h
 OBJS=$(SRC:.cpp=.o)
 
